2013-11-20  Thom Neale  <tneale@sunlightfoundation.com>

* sunlight/debugcache.py:
 - Added a method decorator for caching API responses, base classes for adding more backends if need arises
* sunlight/__init__.py:
 - Imports the cache instance and aliases it
* sunlight/services.py:
 - Imports the cache instance and decorates Service.get with it
 - If the cache is never enabled, everything words the way it always has
 - If the cache is enabled with cache.enable(), API responses get cached

2013-11-08  Daniel Cloud  <dcloud@sunlightfoundation.com>

* sunlight/cli.py:
 - Fix json serialization of EntityList and EntityDict

2013-09-18  Daniel Cloud  <dcloud@sunlightfoundation.com>

* sunlight/service.py:
 - Add EntityList and EntityDict subclasses that provide metadata
* sunlight/services/congress.py:
 - Add new nominations endpoint

2013-07-24  Daniel Cloud  <dcloud@sunlightfoundation.com>

* sunlight/services/congress.py:
 - Work to support the new Congress API

2013-04-26  Paul Tagliamonte  <paultag@sunlightfoundation.com>

* sunlight/cli.py
 - Convert a dict comprehension into a dict() call on a list comprehension
   that produces tuples.
* Bump release to 1.1.8

2012-12-13  Jeremy Carbaugh  <jcarbaugh@sunlightfoundation.com>

* setup.py:
 - add install_requires and entry_points

2012-12-12  Paul Tagliamonte  <paultag@sunlightfoundation.com>

* sunlight/services/*py:
 - Rename classes to not be gross.
* Bump release to 1.1.7

2012-12-12  Jeremy Carbaugh  <jcarbaugh@sunlightfoundation.com>

* sunlight/cli.py:
 - Add a clint CLI wrapper for python-sunlight
* sunlight/__init__.py:
 - Add a method to get services provided.

2012-11-15  Paul Tagliamonte  <paultag@sunlightfoundation.com>

* sunlight/services/congress.py:
 - Add **kwargs for each method, and pass them along to all requests. This
   helps prevent cases where we add an argument and older versions break.
* sunlight/services/*.py:
 - Fixed some outstanding pep8 issues.
* Bump release to 1.1.6
